--- a/preferences/Resources/Root.plist
+++ b/preferences/Resources/Root.plist
@@ -11,12 +11,40 @@
 			<key>key</key>                           <string>enabled</string>
 			<key>label</key>                         <string>Enabled</string>
 		</dict>
+
 		<dict>
+				<key>cell</key>                     <string>PSGroupCell</string>
+				<key>label</key>                    <string>Modules</string>
+		</dict>
+		<!-- <dict>
 			<key>cell</key>                          <string>PSSwitchCell</string>
 			<key>default</key>                       <true/>
 			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                           <string>connectivityGlyphOnly</string>
 			<key>label</key>                         <string>Connectivity Glyph Only</string>
+		</dict> -->
+
+		<!-- https://github.com/srolfe/fancier/blob/master/fanciersettings/HeaderCell.mm -->
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>isController</key>             <true/>
+				<key>detail</key>                   <string>MEVOConnectivity</string>
+				<key>icon</key>                     <string>icons/connectivity</string>
+				<key>label</key>                    <string>Connectivity</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>isController</key>             <true/>
+				<key>detail</key>                   <string>MEVOToggles</string>
+				<key>icon</key>                     <string>icons/toggles</string>
+				<key>label</key>                    <string>Toggles</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>isController</key>             <true/>
+				<key>detail</key>                   <string>MEVOAppLaunchers</string>
+				<key>icon</key>                     <string>icons/applaunchers</string>
+				<key>label</key>                    <string>App Launchers</string>
 		</dict>
 	</array>
 	<key>title</key>                             <string></string>
