--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -6,6 +6,7 @@
 	<array>
 		<dict>
 			<key>cell</key>                          <string>PSSwitchCell</string>
+			<key>cellClass</key>                     <string>MEVOToggle</string>
 			<key>default</key>                       <true/>
 			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                           <string>connectivityHideContainer</string>
@@ -78,7 +79,7 @@
 
 		<dict>
 				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>State Disabled State</string>
+				<key>label</key>                    <string>State: Disabled</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
