--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -15,7 +15,7 @@
 
 		<dict>
 				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>State: Enabled</string>
+				<key>label</key>                    <string>Enabled State</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
@@ -78,7 +78,7 @@
 
 		<dict>
 				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>State: Disabled</string>
+				<key>label</key>                    <string>Disabled State</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
