--- a/preferences/Resources/Toggles.plist
+++ b/preferences/Resources/Toggles.plist
@@ -27,7 +27,7 @@
 
 		<dict>
 				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>State: Enabled</string>
+				<key>label</key>                    <string>Enabled State</string>
 				<key>key</key>  	                  <string>state</string>
 		</dict>
 		<dict>
