--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: com.noisyflake.magmaevo
 Name: Magma Evo
-Depends: mobilesubstrate
+Depends: mobilesubstrate, firmware (>= 12.0), com.opa334.ccsupport, org.thebigboss.libcolorpicker
 Version: 0.0.1
 Architecture: iphoneos-arm
 Description: An awesome MobileSubstrate tweak!
