--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -19,6 +19,7 @@
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
+			<key>cellClass</key>                     <string>MEVOSegment</string>
 			<key>default</key>                       <string>regular</string>
 			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                           <string>connectivityMode</string>
@@ -82,6 +83,7 @@
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
+			<key>cellClass</key>                     <string>MEVOSegment</string>
 			<key>default</key>                       <string>regular</string>
 			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                           <string>connectivityModeDisabled</string>
