--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -15,14 +15,27 @@
 
 		<dict>
 				<key>cell</key>                     <string>PSGroupCell</string>
+		</dict>
+
+		<dict>
+				<key>cell</key>                     <string>PSButtonCell</string>
+				<key>action</key>                   <string>switchState</string>
+				<key>cellClass</key>                <string>MEVOButton</string>
+				<key>label</key>                    <string>Switch to Disabled State</string>
+				<key>key</key>                      <string>switchState</string>
+		</dict>
+
+		<dict>
+				<key>cell</key>                     <string>PSGroupCell</string>
 				<key>label</key>                    <string>Enabled State</string>
+				<key>key</key>  	                  <string>state</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
 			<key>cellClass</key>                     <string>MEVOSegment</string>
 			<key>default</key>                       <string>regular</string>
 			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                           <string>connectivityMode</string>
+			<key>key</key>                           <string>connectivityModeEnabled</string>
 			<key>validTitles</key>
 				<array>
 					<string>Regular</string>
@@ -77,10 +90,6 @@
 				<key>label</key>                    <string>WiFi</string>
 		</dict>
 
-		<dict>
-				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>Disabled State</string>
-		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
 			<key>cellClass</key>                     <string>MEVOSegment</string>
