--- a/preferences/Resources/defaults.plist
+++ b/preferences/Resources/defaults.plist
@@ -14,5 +14,7 @@
 		<key>mediaControlsHideContainer</key>        <false/>
 		<key>mediaControlsColorLockscreen</key>      <false/>
 
+		<key>slidersHideContainer</key>        <false/>
+
 	</dict>
 </plist>
