--- a/preferences/Resources/Root.plist
+++ b/preferences/Resources/Root.plist
@@ -50,7 +50,7 @@
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>isController</key>             <true/>
-				<key>detail</key>                   <string>MEVOMisc</string>
+				<key>detail</key>                   <string>MEVOMiscController</string>
 				<key>icon</key>                     <string>icons/misc</string>
 				<key>label</key>                    <string>Miscellaneous</string>
 		</dict>
