--- a/preferences/Resources/Misc.plist
+++ b/preferences/Resources/Misc.plist
@@ -9,6 +9,14 @@
 			<key>label</key>                    <string>Status Bar</string>
 		</dict>
 		<dict>
+			<key>cell</key>                     <string>PSSwitchCell</string>
+			<key>cellClass</key>                <string>MEVOToggle</string>
+			<key>default</key>                  <false/>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>miscStatusBarHide</string>
+			<key>label</key>                    <string>Hide</string>
+		</dict>
+		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>alpha</key>                    <true/>
