--- a/preferences/Resources/defaults.plist
+++ b/preferences/Resources/defaults.plist
@@ -15,5 +15,7 @@
 		<key>mediaControlsColorLockscreen</key>      <false/>
 
 		<key>slidersHideContainer</key>              <false/>
+
+		<key>miscStatusBarHide</key>                 <false/>
 	</dict>
 </plist>
