--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: com.noisyflake.magmaevo
 Name: Magma Evo
 Depends: mobilesubstrate, firmware (>= 12.0), com.opa334.ccsupport, org.thebigboss.libcolorpicker
-Version: 0.0.1
+Version: 1.0.0-rc1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: Your Control Center. Redefined.
 Maintainer: NoisyFlake
 Author: NoisyFlake
 Section: Tweaks
