--- a/preferences/Resources/Root.plist
+++ b/preferences/Resources/Root.plist
@@ -5,6 +5,14 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>cell</key>						<string>PSGroupCell</string>
+			<key>headerCellClass</key>			<string>MEVOHeader</string>
+ 		</dict>
+ 		<dict>
+			<key>cell</key>                     <string>PSGroupCell</string>
+		</dict>
+
+		<dict>
 			<key>cell</key>                          <string>PSSwitchCell</string>
 			<key>cellClass</key>                     <string>MEVOToggle</string>
 			<key>default</key>                       <true/>
