--- a/preferences/Resources/Toggles.plist
+++ b/preferences/Resources/Toggles.plist
@@ -50,6 +50,13 @@
 					<string>colorOverlay</string>
 				</array>
 		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOGlobalColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>label</key>                    <string>Set Global Color</string>
+				<key>key</key>                      <string>togglesGlobalColor</string>
+		</dict>
 
 	</array>
 	<key>title</key>                             <string>Launchers &amp; Toggles</string>
