Add PowerModule support

--- a/preferences/Resources/defaults.plist
+++ b/preferences/Resources/defaults.plist
@@ -17,5 +17,7 @@
 		<key>slidersHideContainer</key>              <false/>
 
 		<key>miscStatusBarHide</key>                 <false/>
+		<key>powerModuleHideContainer</key>          <false/>
+		<key>powerModuleHideBackground</key>         <false/>
 	</dict>
 </plist>
