--- a/preferences/Resources/Misc.plist
+++ b/preferences/Resources/Misc.plist
@@ -6,6 +6,19 @@
 	<array>
 		<dict>
 			<key>cell</key>                     <string>PSGroupCell</string>
+			<key>label</key>                    <string>Control Center</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>alpha</key>                    <true/>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>miscMainBackground</string>
+			<key>label</key>                    <string>Background Color</string>
+		</dict>
+
+		<dict>
+			<key>cell</key>                     <string>PSGroupCell</string>
 			<key>label</key>                    <string>Status Bar</string>
 		</dict>
 		<dict>
@@ -27,15 +40,74 @@
 
 		<dict>
 			<key>cell</key>                     <string>PSGroupCell</string>
-			<key>label</key>                    <string>Control Center</string>
+			<key>label</key>                    <string>Power Module</string>
+			<key>feature</key>                  <string>PowerModule</string>
 		</dict>
 		<dict>
-			<key>cell</key>                     <string>PSLinkCell</string>
-			<key>cellClass</key>                <string>MEVOColorPicker</string>
-			<key>alpha</key>                    <true/>
+			<key>cell</key>                     <string>PSSwitchCell</string>
+			<key>cellClass</key>                <string>MEVOToggle</string>
+			<key>default</key>                  <false/>
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                      <string>miscMainBackground</string>
-			<key>label</key>                    <string>Background Color</string>
+			<key>key</key>                      <string>powerModuleHideContainer</string>
+			<key>label</key>                    <string>Hide Container Background</string>
+			<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSSwitchCell</string>
+			<key>cellClass</key>                <string>MEVOToggle</string>
+			<key>default</key>                  <false/>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>powerModuleHideBackground</string>
+			<key>label</key>                    <string>Hide Glyph Background</string>
+			<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>RespringButtonController</string>
+				<key>label</key>                    <string>Respring</string>
+				<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>UICacheButtonController</string>
+				<key>label</key>                    <string>UICache</string>
+				<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>SafemodeButtonController</string>
+				<key>label</key>                    <string>Safemode</string>
+				<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>RebootButtonController</string>
+				<key>label</key>                    <string>Reboot</string>
+				<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>PowerDownButtonController</string>
+				<key>label</key>                    <string>Power Down</string>
+				<key>feature</key>                  <string>PowerModule</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>LockButtonController</string>
+				<key>label</key>                    <string>Lock Screen</string>
+				<key>feature</key>                  <string>PowerModule</string>
 		</dict>
 	</array>
 	<key>title</key>                            <string>Miscellaneous</string>
