--- a/preferences/entry.plist
+++ b/preferences/entry.plist
@@ -11,7 +11,7 @@
 		<key>detail</key>
 		<string>MEVORootListController</string>
 		<key>icon</key>
-		<string>icon.png</string>
+		<string>icons/Magma.png</string>
 		<key>isController</key>
 		<true/>
 		<key>label</key>
