--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: com.noisyflake.magmaevo
 Name: Magma Evo
-Depends: mobilesubstrate, firmware (>= 12.0), com.opa334.ccsupport, org.thebigboss.libcolorpicker
+Depends: mobilesubstrate, firmware (>= 12.0), preferenceloader (>= 2.2.4~beta1), com.opa334.ccsupport, org.thebigboss.libcolorpicker
 Version: 1.0.0-rc3
 Architecture: iphoneos-arm
 Description: Your Control Center. Redefined.
