--- a/control
+++ b/control
@@ -1,7 +1,7 @@
 Package: com.noisyflake.magmaevo
 Name: Magma Evo
 Depends: mobilesubstrate, firmware (>= 12.0), preferenceloader (>= 2.2.4~beta1), com.opa334.ccsupport, org.thebigboss.libcolorpicker
-Conflicts: com.noisyflake.magma, com.noisyflake.magmapro, me.nepeta.libcolorpicker
+Conflicts: com.noisyflake.magma, com.noisyflake.magmapro
 Version: 1.0.6
 Architecture: iphoneos-arm
 Description: Redefine your Control Center
