Allow coloring the volume HUD system-wide

--- a/preferences/Resources/defaults.plist
+++ b/preferences/Resources/defaults.plist
@@ -15,6 +15,7 @@
 		<key>mediaControlsColorLockscreen</key>      <false/>
 
 		<key>slidersHideContainer</key>              <false/>
+		<key>slidersVolumeSystem</key>               <false/>
 
 		<key>miscStatusBarHide</key>                 <false/>
 		<key>powerModuleHideContainer</key>          <false/>
