--- a/preferences/Resources/Sliders.plist
+++ b/preferences/Resources/Sliders.plist
@@ -39,6 +39,14 @@
 			<key>label</key>                    <string>Volume</string>
 		</dict>
 		<dict>
+			<key>cell</key>                          <string>PSSwitchCell</string>
+			<key>cellClass</key>                     <string>MEVOToggle</string>
+			<key>default</key>                       <false/>
+			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                           <string>slidersVolumeSystem</string>
+			<key>label</key>                         <string>System-wide coloring</string>
+		</dict>
+		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>alpha</key>                    <true/>
