--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: com.noisyflake.magmaevo
 Name: Magma Evo
-Depends: mobilesubstrate, firmware (>= 12.0), preferenceloader (>= 2.2.4), com.opa334.ccsupport, org.thebigboss.libcolorpicker (>= 1.6.7)
+Depends: mobilesubstrate, firmware (>= 12.0), preferenceloader, com.opa334.ccsupport, org.thebigboss.libcolorpicker (>= 1.6.7)
 Conflicts: com.noisyflake.magma, com.noisyflake.magmapro
-Version: 1.1.3
+Version: 1.1.4
 Architecture: iphoneos-arm
 Description: Redefine your Control Center
 Maintainer: NoisyFlake
