Add support for Prysm weather module and media progress bar

--- a/preferences/Resources/defaults.plist
+++ b/preferences/Resources/defaults.plist
@@ -20,6 +20,7 @@
 		<key>miscStatusBarHide</key>                 <false/>
 		<key>powerModuleHideContainer</key>          <false/>
 		<key>powerModuleHideBackground</key>         <false/>
+		<key>prysmWeatherHideContainer</key>         <false/>
 		<key>betterCCXIHideContainer</key>           <false/>
 		<key>betterCCXIFix</key>                     <false/>
 	</dict>
