--- a/preferences/Resources/MediaControls.plist
+++ b/preferences/Resources/MediaControls.plist
@@ -77,6 +77,7 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsSlider</string>
 				<key>label</key>                    <string>Progress Bar</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
