--- a/preferences/Resources/Misc.plist
+++ b/preferences/Resources/Misc.plist
@@ -134,6 +134,53 @@
 
 		<dict>
 			<key>cell</key>                     <string>PSGroupCell</string>
+			<key>label</key>                    <string>Prysm Weather</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSSwitchCell</string>
+			<key>cellClass</key>                <string>MEVOToggle</string>
+			<key>default</key>                  <false/>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>prysmWeatherHideContainer</string>
+			<key>label</key>                    <string>Hide Container Background</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>prysmWeatherLocationTitle</string>
+			<key>label</key>                    <string>Condition</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>prysmWeatherLocationSubtitle</string>
+			<key>label</key>                    <string>Location</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>prysmWeatherCurrentTemperature</string>
+			<key>label</key>                    <string>Current Temperature</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>prysmWeatherTemperatureRange</string>
+			<key>label</key>                    <string>Temperature Range</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
+
+		<dict>
+			<key>cell</key>                     <string>PSGroupCell</string>
 			<key>label</key>                    <string>BetterCCXI Weather</string>
 			<key>feature</key>                  <string>bcxiWeather</string>
 		</dict>
