Add support for Prysm weather icon and Media Controls Artwork/AirPlay

--- a/preferences/Resources/MediaControls.plist
+++ b/preferences/Resources/MediaControls.plist
@@ -83,6 +83,15 @@
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>prysmMediaControlsArtworkPreview</string>
+				<key>label</key>                    <string>Prysm Artwork Preview</string>
+				<key>feature</key>                  <string>prysm</string>
+				<key>alpha</key>                    <true/>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsRoutingButton</string>
 				<key>label</key>                    <string>AirPlay</string>
 		</dict>
